--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 body {
   padding: 0;
   margin: 0;
+  font-family: cursive;
+  background-repeat: no-repeat;
+  min-height: 100vh;
 }
 
 .container { width: 100%; }
@@ -17,7 +20,7 @@ body {
 
 .container table {
   margin: auto;
-  margin-top: 50px;
+  margin-top: 25px;
 }
 
 .cell {
@@ -30,18 +33,44 @@ body {
   box-shadow: 0 0 5px gray;
   transition-duration: 0.3s;
   border-radius: 3px;
+  cursor: pointer;
 }
 .cell:hover { background-color: darkgrey; }
 
-.levels {
-  margin: auto;
-  width: 70%;
+.status-btn img {
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgb(0, 0, 0);
+  cursor: pointer;
 }
 
-.active { border: 1px solid red; }
+.levels {
+  margin: auto;
+  margin-top: 50px;
+  width: 70%;
+  text-align: center;
+  background: transparent;
+}
+
+.level {
+  display: inline-block;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 10px;
+  margin: 5px;
+  border: 2px solid white;
+  color: white;
+  background: rgba(0, 0, 0, 0.1);
+  transition-duration: 0.3s;
+}
+.level:hover {
+  background: rgba(0, 0, 0, 0.3);
+  border: 2px solid rgba(0, 0, 0, 0.3);
+}
+
+.active { border: 2px solid rgba(0, 0, 0, 0.3); }
 
 .shown {
-  background-color: darkgrey;
+  background-color: rgba(0, 0, 0, 0.4);
   color: white;
   box-shadow: none;
   border: 2px solid white;
