--- a/css/buttons.css
+++ b/css/buttons.css
@@ -34,3 +34,11 @@
   border-radius: 50%;
   color: white;
 }
+
+.exterminator-btn {
+  height: 48px;
+  background: linear-gradient(to top right, blue, red) !important;
+  border: 2px solid white !important;
+  border-radius: 50%;
+  color: white;
+}
