--- a/css/main.css
+++ b/css/main.css
@@ -15,26 +15,12 @@ header {
   text-align: center;
 }
 
-.container { width: 100%; }
-
-.container table {
+.controls {
   margin: auto;
-  margin-top: 25px;
-}
-
-.cell {
-  width: 56px;
-  height: 56px;
-  background: rgba(255, 255, 255, 0.5);
-  border: 2px solid rgba(0, 0, 0, 0.4);
-  font-size: 24px;
-  font-weight: 600;
+  width: 70%;
   text-align: center;
-  transition-duration: 0.3s;
-  border-radius: 3px;
-  cursor: pointer;
+  background: transparent;
 }
-.cell:hover { background: rgba(0, 0, 0, 0.5); }
 
 .status-btn img {
   border-radius: 50%;
@@ -42,7 +28,9 @@ header {
   cursor: pointer;
 }
 
-.levels { margin-bottom: 10px; }
+.levels {
+  margin-bottom: 10px;
+}
 
 .level {
   display: inline-block;
@@ -61,21 +49,22 @@ header {
   border: 2px solid white;
 }
 
-.active { border: 2px solid white; }
-
-.shown {
-  background-color: rgba(0, 0, 0, 0.4);
-  color: white;
-  box-shadow: none;
+.active {
   border: 2px solid white;
 }
 
-.safe-mark { border: 2px solid orange; }
+.dark-mode {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-.blew-up { background-color: red; }
+.dark-mode label {
+  margin-right: 10px;
+}
 
 .scores {
-  position: absolute;
+  position: fixed;
   bottom: 10px;
   left: 10px;
 }
