--- a/css/cell.css
+++ b/css/cell.css
@@ -1,8 +1,6 @@
 .cell {
   width: 56px;
   height: 56px;
-  background: rgba(255, 255, 255, 0.5);
-  border: 2px solid rgba(0, 0, 0, 0.4);
   font-size: 24px;
   font-weight: 600;
   text-align: center;
@@ -11,15 +9,37 @@
   cursor: pointer;
 }
 
-.cell:hover {
+.cell-light {
+  background: rgba(255, 255, 255, 0.5);
+  border: 2px solid rgba(0, 0, 0, 0.4);
+}
+
+.cell-dark {
+  background: rgba(0, 0, 0, 0.4);
+  border: 2px solid rgba(255, 255, 255, 0.5);
+}
+
+.cell-hover-light {
   background: rgba(0, 0, 0, 0.5);
 }
 
+.cell-hover-dark {
+  background: rgba(255, 255, 255, 0.4);
+}
+
 .shown {
-  background-color: rgba(0, 0, 0, 0.4);
-  color: white;
   box-shadow: none;
   border: 2px solid white;
+}
+
+.shown-light {
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+}
+
+.shown-dark {
+  background-color: rgba(255, 255, 255, 0.4);
+  color: white;
 }
 
 .safe-mark {
